# legacy_TReq

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml  tests.yaml
doc/: help.json
src/: app.rs  cli.rs  events.rs  input.rs  keymaps.rs  lib.rs  logger.rs  main.rs  request.rs  runner.rs  ui.rs
src/app/: app.rs  mod.rs  states.rs
src/app/states/: active_logs.rs  active_request_body.rs  active_request_headers.rs  active_request_url.rs  active_response_body.rs  active_response_headers.rs  active_tablist.rs  default.rs  empty.rs  manager.rs  mod.rs  states_names.rs
src/base/: logs.rs  mod.rs
src/base/actions/: manager.rs  mod.rs
src/base/commands/: handler.rs  mod.rs  tabs.rs
src/base/doc/: handler.rs  mod.rs
src/base/os/: file_edition_handler.rs  file_editor.rs  file_facades.rs  file_factory.rs  handler.rs  mod.rs
src/base/states/: manager.rs  (+3 more)
src/commands/: jumps.rs  mod.rs  moves.rs  request.rs  tabs.rs
src/config/: configurations.rs  manager.rs  mod.rs  saves.rs  trat.rs
src/input/: buffer.rs  input.rs  input_handler.rs  keymaps.rs  listener.rs  mod.rs
src/states/: active_logs.rs  active_request.rs  active_request_body.rs  active_request_headers.rs  active_request_url.rs  active_response.rs  active_response_body.rs  active_response_headers.rs  active_tablist.rs  default.rs  mod.rs
src/utils/: config.rs  files.rs  mod.rs
src/view/: help.rs  mod.rs  types.rs  ui.rs
tests/: Dockerfile  build_tests.sh  mod.rs  run_tests.sh
tests/e2e/: mod.rs  requests.rs  tabs.rs  variables.rs
tests/integration/: Dockerfile  files_handler.rs  mod.rs  network.rs  run_tests.sh
tests/mocks/: file_facade.rs  file_factory.rs  mock_app.rs  mod.rs  web_client.rs
tests/utils/: mod.rs
(+99 files in other folders)
