[package]
name = "treq"
authors = [ "Talis-Fb" ]
version = "0.1.8"
edition = "2021"
license = "GPL-3.0"
description = "A Client to make HTTP requests for Vim/Terminal Users"
homepage = "https://github.com/talis-fb/TReq"
repository = "https://github.com/talis-fb/TReq"
documentation = "https://github.com/talis-fb/TReq"

[dependencies]
tui = "0.19"
crossterm = "0.25"
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.60"
tempfile = "3.3.0"
toml = "0.5.10"
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
directories = "4.0.1"
regex = "1.7.1"

[[bin]]
name = "treq"

[package.metadata]
optdepends = ["vim"]

